--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-players</title>
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:400,700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/525a7ba6e9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
+
 </head>
+
 <body>
-    
+    <header>
+        <div class="container cabecalho">
+            <a href="index.html">
+                <img src="img/Imagens/Logo.svg" alt="Logo do site E-players">
+
+            </a>
+            <nav>
+                <ul>
+                    <li><a href="index.html" title="voltar para a página inicial">INÍCIO</a></li>
+                    <li><a href="#horários" title="ir até a sessão de horários de partida">HORÁRIOS</a></li>
+                    <li><a href="#resultados" title="ir até os resultados das partidas">RESULTADOS</a></li>
+                    <li><a href="#noticias" title="ir até a sessão de notícias">NOTÍCIAS</a></li>
+                    <li><a href="#">
+                        <i class="fas fa-search"></i>
+                        </a>
+                    </li>
+                    
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+
 </body>
+
 </html>
