--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     </header>
 
     <main>
+        <div class="banner">
+            <a href="cadastro.html" class="btn gradient">INSCREVA-SE</a>
+        </div>
 
     </main>
     <footer>
