--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
             <a href="cadastro.html" class="btn gradient">INSCREVA-SE</a>
         </div>
 
+        <div class="sobre">
+           <div class="container">
+            <div>
+                <h1>O QUE É O MUNDO COMUM?</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, fuga in accusantium autem velit atque repellendus, numquam tempore aspernatur id eos dolor sunt aliquam voluptatibus quaerat dolorum eveniet earum doloremque.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, fuga in accusantium autem velit atque repellendus, numquam tempore aspernatur id eos dolor sunt aliquam voluptatibus quaerat dolorum eveniet earum doloremque.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, fuga in accusantium autem velit atque repellendus, numquam tempore aspernatur id eos dolor sunt aliquam voluptatibus quaerat dolorum eveniet earum doloremque.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, fuga in accusantium autem velit atque repellendus, numquam tempore aspernatur id eos dolor sunt aliquam voluptatibus quaerat dolorum eveniet earum doloremque.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, fuga in accusantium autem velit atque repellendus, numquam tempore aspernatur id eos dolor sunt aliquam voluptatibus quaerat dolorum eveniet earum doloremque.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, fuga in accusantium autem velit atque repellendus, numquam tempore aspernatur id eos dolor sunt aliquam voluptatibus quaerat dolorum eveniet earum doloremque.</p>
+            </div>
+                <img src="img/Imagens/lol-champions-png-8.png" alt=""class="campea"> 
+            </div>
+
+        </div>
+
+           </div>
     </main>
     <footer>
 
