--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </section>
 
         <div class="container content">
-            <section class="noticias">
+            <section class="noticias" id="noticias">
 
                 <div class="card">
                     <img src="img/Imagens/Teams/T1.jpeg" alt="Notícia sobre o assunto 1">
@@ -153,7 +153,7 @@
                 </div>
 
             </section>
-            <section class="recentes">
+            <section class="recentes" id="resultados">
                 <h3>PARTIDAS RECENTES</h3>
 
                 <div class="resultados">
