--- a/index.html
+++ b/index.html
@@ -117,39 +117,45 @@
 
                 <div class="card">
                     <img src="img/Imagens/Teams/T1.jpeg" alt="Notícia sobre o assunto 1">
+                    <div>
                     <h4>Título da notícia</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut quidem maxime obcaecati dicta. Ex doloremque id tempora ullam iusto similique nisi, ab facilis iste molestias quas necessitatibus optio qui praesentium.</p>
-
+                    </div>
                 </div>
                 <div class="card">
                     <img src="img/Imagens/Teams/T2.jpg" alt="Notícia sobre o assunto 1">
+                    <div>
                     <h4>Título da notícia</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut quidem maxime obcaecati dicta. Ex doloremque id tempora ullam iusto similique nisi, ab facilis iste molestias quas necessitatibus optio qui praesentium.</p>
-
+                    </div>
                 </div>
                 <div class="card">
                     <img src="img/Imagens/Teams/T3.jpeg" alt="Notícia sobre o assunto 1">
+                    <div>
                     <h4>Título da notícia</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut quidem maxime obcaecati dicta. Ex doloremque id tempora ullam iusto similique nisi, ab facilis iste molestias quas necessitatibus optio qui praesentium.</p>
-
+                    </div>
                 </div>
                 <div class="card">
                     <img src="img/Imagens/Teams/T6.jpg" alt="Notícia sobre o assunto 1">
+                    <div>
                     <h4>Título da notícia</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut quidem maxime obcaecati dicta. Ex doloremque id tempora ullam iusto similique nisi, ab facilis iste molestias quas necessitatibus optio qui praesentium.</p>
-
+                    </div>
                 </div>
                 <div class="card">
                     <img src="img/Imagens/Teams/T5.jpeg" alt="Notícia sobre o assunto 1">
+                    <div>
                     <h4>Título da notícia</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut quidem maxime obcaecati dicta. Ex doloremque id tempora ullam iusto similique nisi, ab facilis iste molestias quas necessitatibus optio qui praesentium.</p>
-
+                    </div>
                 </div>
                 <div class="card">
                     <img src="img/Imagens/Teams/T7.jpeg" alt="Notícia sobre o assunto 1">
+                    <div>
                     <h4>Título da notícia</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut quidem maxime obcaecati dicta. Ex doloremque id tempora ullam iusto similique nisi, ab facilis iste molestias quas necessitatibus optio qui praesentium.</p>
-
+                    </div>
                 </div>
 
             </section>
@@ -295,7 +301,7 @@
                 </nav>
             </div>
          
-            <div>
+            <div class="mob_logo_sociais">
                 <img src="img/Imagens/Logo.svg" alt="Logo do projeto E-players">
                 <div class="sociais">
                     <i class="fab fa-facebook-square"></i>
